--- a/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Service/appsettings.Template.json
+++ b/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Service/appsettings.Template.json
@@ -9,5 +9,6 @@
   "ConnectionString": "db.bin",
   "YouTubeUser": "",
   "ClientSecretsFilePath": "",
-  "BrowserPath": ""
+  "BrowserPath": "",
+  "OpenPlaylist": "0"
 }
