added auto delete old playlists

--- a/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/appsettings.Template.json
+++ b/project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/appsettings.Template.json
@@ -10,5 +10,6 @@
   "YouTubeUser": "",
   "ClientSecretsFilePath": "",
   "BrowserPath": "",
-  "OpenPlaylist": "0"
+  "OpenPlaylist": "0",
+  "PlaylistOldDays": "7"
 }
