refactored project structure

--- a/.gitignore
+++ b/.gitignore
@@ -267,8 +267,5 @@ resources/fonts
 resources/graphics
 deploy/
 build/nuke
-project/AutoYoutubePlaylist/AutoYoutubePlaylist.Logic/appsettings.json
-project/AutoYoutubePlaylist/AutoYoutubePlaylist.Service/db.bin
-project/AutoYoutubePlaylist/AutoYoutubePlaylist.Service/db-log.bin
-project/AutoYoutubePlaylist/AutoYoutubePlaylist.Service/appsettings.json
-project/AutoYoutubePlaylist/AutoYoutubePlaylist.Gui/appsettings.json
+appsettings.json
+project/AutoYoutubePlaylist/*/appsettings.json
