--- a/project/AutoYoutubePlaylist.Gui/AutoYoutubePlaylist.Gui.csproj
+++ b/project/AutoYoutubePlaylist.Gui/AutoYoutubePlaylist.Gui.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <Content Include="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
@@ -41,5 +41,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="if $(ConfigurationName) == Debug echo F | xcopy /R /Y &quot;$(ProjectDir)appsettings.json&quot; &quot;$(TargetDir)appsettings.json&quot;" />
+  </Target>
 
 </Project>
