--- a/project/AutoYoutubePlaylist.Console/AutoYoutubePlaylist.Console.csproj
+++ b/project/AutoYoutubePlaylist.Console/AutoYoutubePlaylist.Console.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="..\AutoYoutubePlaylist.Shared\Code\Properties\SharedAssemblyInfo.cs" Link="Properties\SharedAssemblyInfo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
@@ -30,5 +34,9 @@
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="if $(ConfigurationName) == Debug echo F | xcopy /R /Y &quot;$(ProjectDir)appsettings.json&quot; &quot;$(TargetDir)appsettings.json&quot;" />
   </Target>
+
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
 
 </Project>
