--- a/project/AutoYoutubePlaylist.Logic/AutoYoutubePlaylist.Logic.csproj
+++ b/project/AutoYoutubePlaylist.Logic/AutoYoutubePlaylist.Logic.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.62.0.3169" />
     <PackageReference Include="LiteDB" Version="5.0.17" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
   </ItemGroup>
 
